--- a/image.html
+++ b/image.html
@@ -10,6 +10,6 @@
     <h1>Image page</h1>
     <p>This is image page. Welcome!</p>
 
-   <a href="index.html"> <img src="img/developer - Shortcut.lnk" width="200" height="200" alt="developer"></a>
+   <a href="index.html"> <img src="img/developer.png" width="200" height="200" alt="developer"></a>
 </body>
 </html>
