--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="page1.html">Go to Page 1</a><br>
     <a href="page2.html">Go to Page 2</a><br>
     <a href="page3.html">Go to Page 3</a><br>
-    <a href="page4.html">Go to Page 4</a>
+    <a href="page4.html">Go to Page 4</a><br>
     <a href="image.html">Go to Page 4</a>
 
 </body>
