--- a/image.html
+++ b/image.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   
-    <h1>Image page</h1>
-    <p>This is image page. Welcome!</p>
-
-   <a href="index.html"> <img src="img/developer.png" width="200" height="200" alt="developer"></a>
+    <h1>My CV</h1>
+    <p>This is CV page. Welcome!</p>
+    <a href="index.html">Back to Home</a><br>
+    <img src="img/cv.png"  alt="developer">
 </body>
 </html>
