--- a/Service.html
+++ b/Service.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Page 1</title>
 </head>
 <body>
-
-    <h1>Welcome to My Website</h1>
-    <a href="https://portfolio-next-js-3bhk.vercel.app/">My portfolio</a>
-   
-    <a href="#">Home</a><br>
+    <h1>Service Page</h1>
+    <p>This is Service Page. Welcome!</p>
+    <a href="index.html">Home</a><br>
     <a href="About.html">About</a><br>
     <a href="Contact.html">Contact</a><br>
-    <a href="Service.html">Services</a><br>
     <a href="image.html">CV</a>
 
-
+    <ul>
+        <li>Web Development</li>
+        <li>Mobile App Development</li>
+        <li>UI/UX Design</li>
+    </ul>
 </body>
 </html>
